--- a/portfolio-front/src/app/components/banner/banner.component.html
+++ b/portfolio-front/src/app/components/banner/banner.component.html
@@ -1,4 +1,4 @@
-<section class="banner p-0">
+<section class="banner">
   <div>
     <img class="card-img" src="/assets/img/a4.png" alt="banner" />
     <!-- [src]="banner"  -->
@@ -28,4 +28,3 @@
 </section>
 
 <app-editbanner></app-editbanner>
-
