--- a/portfolio-front/src/app/components/footer/footer.component.html
+++ b/portfolio-front/src/app/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <section class="footer">
   <button class="btn">
-    <a href="#return"> &lt; back to top &gt; </a>
+    <a href="#return"> <i class="fa-solid fa-arrow-up"></i> </a>
   </button>
   <p>AGREGAR LICENCIA ETC</p>
 </section>
