--- a/portfolio-front/src/app/components/footer/footer.component.html
+++ b/portfolio-front/src/app/components/footer/footer.component.html
@@ -1,6 +1,13 @@
 <section class="footer">
+  <div class="license">
+  <h3>AGREGAR LICENCIA ETC</h3>
+  </div>
+  <div>
   <button class="btn">
-    <a href="#return"> <i class="fa-solid fa-arrow-up"></i> </a>
+    <i class="fa-solid fa-arrow-up">
+      <a href="#return"> </a>
+    </i>
   </button>
-  <p>AGREGAR LICENCIA ETC</p>
+  </div>
+
 </section>
