--- a/portfolio-front/src/app/components/socials/socials.component.css
+++ b/portfolio-front/src/app/components/socials/socials.component.css
@@ -1,18 +1,14 @@
 .socials{
     display:flex;
+    justify-content: center;
 
 }
-/* .social{
-    padding: 0 10px 0 10px;
-    display: flex;
-    flex-direction: row;
-    flex-grow: 1;
-}
-a{background-color: transparent;} */
-
-
 .btn{
-    padding: 2em;
+    padding: 1em;
+
+}
+.btn i{
+    display: flex;
 
 }
 
