--- a/portfolio-front/src/app/components/navbar/navbar.component.html
+++ b/portfolio-front/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav id="return" class="navbar navbar-expand-lg bg-transparent">
-  <div class="container-fluid">
+  <div class="container-fluid justify-content-center">
     <a><img class="logo" src="assets/img/logo.png" alt="logoArgProg" /></a>
     <button
       class="navbar-toggler"
@@ -13,14 +13,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-      <!-- i had to leave this here cause otherwise the login and logout button go to the left -->
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item"></li>
-      </ul>
-
-      <div
-        class="d-grid gap-2 d-md-flex justify-content-center flex-row-reverse"
-      >
+      <div class="flex-container justify-content-center flex-row-reverse">
         <!-- login button component -->
 
         <!-- make it appear and disappear -->
@@ -31,8 +24,6 @@
         <app-logout></app-logout>
         <!-- social links -->
         <app-socials></app-socials>
-
-        
 
         <!-- fin socials -->
       </div>
