--- a/portfolio-front/src/app/components/socials/socials.component.html
+++ b/portfolio-front/src/app/components/socials/socials.component.html
@@ -15,36 +15,14 @@
     </button>
 
     <!-- modal edit add and delete -->
-
-    <!-- <button
-     type="button"
-     class="btn add-btn btn-primary"
-     data-bs-toggle="modal"
-     data-bs-target="#addsocial"
-   >
-     <i class="fa-solid fa-plus"></i>
-   </button> -->
-
-    <!-- <div class="col-1 admin-btn"> -->
-    <!-- edit -modal trigger button -->
-    <!-- <button
-          type="button"
-          class="btn edit-btn btn-primary"
-          data-bs-toggle="modal"
-          data-bs-target="#editjob"
-        >
-          <i class="fa-solid fa-wand-magic-sparkles"></i>
-        </button> -->
-
-    <!--del- modal trigger button -->
-
-    <!-- <button type="button" class="btn del-btn">
-          <i class="fa-solid fa-trash-can"></i>
-        </button>
-      </div> -->
-
-    <!-- ------- -->
-
-    <!-- ----------------- -->
+    <button
+      type="button"
+      class="btn edit-btn btn-primary"
+      data-bs-toggle="modal"
+      data-bs-target="#editsocial"
+    >
+      <i class="fa-solid fa-wand-magic-sparkles"></i>
+    </button>
+    <app-editsocial></app-editsocial>
   </div>
 </div>
