--- a/portfolio-front/src/app/components/introduction/introduction.component.html
+++ b/portfolio-front/src/app/components/introduction/introduction.component.html
@@ -1,8 +1,8 @@
 <section class="introduction" id="home">
   <!-- left side -->
   <div class="left">
-    <h1 class="section__title section__title--intro">Hola, me llamo</h1>
-    <h1 class="section__title section__title--intro">
+    <h1 class="section__title section__title--intro center">Hola, me llamo</h1>
+    <h1 class="section__title section__title--intro center">
       <strong>{{name}}</strong>
     </h1>
     <p class="section__subtitle section__subtitle--intro">
