--- a/portfolio-front/src/styles.css
+++ b/portfolio-front/src/styles.css
@@ -26,14 +26,14 @@
   --clr-accent:#009188;
 
 
-  --fs-h1:3rem;
+  --fs-h1:2.75rem;
   --fs-h2: 2.25rem;
   --fs-h3: 1.25rem;
   --fs-body: 1rem;
   
 
 }
-
+/* review */
 @media(min-width: 800px){
   :root{
     --fs-h1: 4.5rem;
@@ -125,7 +125,7 @@ h6 span{
     text-align: center;
     border: none;
     background-color: #009188;
-    color: #ffffff;
+    color: var(--clr-light);
     box-shadow: 0 8px 24px 0 rgba(255,235,167,.2);
   }
 
@@ -139,7 +139,7 @@ h6 span{
 
   a i{
     width: 100%;
-    color: #ffffff;
+    color: var(--clr-light);
   }
   a i:hover{
     color: #009188;
@@ -150,17 +150,17 @@ h6 span{
   .btn:active,
 
   .btn:focus{  
-    background-color: #ffffff;
+    background-color: var(--clr-light);
     color:#009188;
     box-shadow: 0 8px 24px 0 rgba(16,39,112,.2);
   }
   .btn:hover{  
-    background-color: #ffffff;
+    background-color: var(--clr-light);
     color: #009188;
     box-shadow: 0 8px 24px 0 rgba(16,39,112,.2);
   }
  .btn i:hover{  
-    background-color: #ffffff;
+    background-color: var(--clr-light);
     color: #009188;
   }
 
@@ -195,7 +195,7 @@ h6 span{
   }
 
   .btn-close{
-    color: #fff;
+    color: var(--clr-light);
   }
 
 /* ------------------------------------------ */
