--- a/portfolio-front/src/app/components/introduction/introduction.component.html
+++ b/portfolio-front/src/app/components/introduction/introduction.component.html
@@ -3,10 +3,10 @@
   <div class="left">
     <h1 class="section__title section__title--intro center">Hola, me llamo</h1>
     <h1 class="section__title section__title--intro center">
-      <strong>{{name}}</strong>
+      <strong>{{ name }}</strong>
     </h1>
     <p class="section__subtitle section__subtitle--intro">
-      <i>{{title}}</i>
+      <i>&lt; {{ title }} &gt;</i>
     </p>
   </div>
   <!-- profile picture -->
