--- a/portfolio-front/src/app/components/banner/banner.component.html
+++ b/portfolio-front/src/app/components/banner/banner.component.html
@@ -1,11 +1,16 @@
-<section class="banner">
+<!-- <section class="banner">
 
-    <img class="card-img" src="/assets/img/a4.png" alt="banner" />
+    <img class="card-img" [src]="banner" alt="banner" /> -->
+
+
+
     <!-- [src]="banner"  -->
 
 
       <!-- edit -modal trigger button -->
-  <div class="col-1 admin-btn">
+
+
+  <!-- <div class="col-1 admin-btn">
 
     <button
       type="button"
@@ -17,6 +22,6 @@
     </button>
 
   </div>
-</section>
-
-<app-editbanner></app-editbanner>
+</section> -->
+<!-- 
+<app-editbanner></app-editbanner> -->
