--- a/portfolio-front/src/app/components/footer/footer.component.html
+++ b/portfolio-front/src/app/components/footer/footer.component.html
@@ -5,7 +5,7 @@
   <div>
   <button class="btn">
     <i class="fa-solid fa-arrow-up">
-      <a href="#return"> </a>
+      <a href="#home"> </a>
     </i>
   </button>
   </div>
