--- a/portfolio-front/src/app/components/about/about.component.html
+++ b/portfolio-front/src/app/components/about/about.component.html
@@ -1,19 +1,20 @@
-
 <section class="about-me" id="about">
   <h2 class="section__title section__title--about">
     <strong> &lt; sobre mi &gt; </strong>
   </h2>
-  <p class="section__subtitle section__subtitle--about"></p>
+
+  <!-- <p class="section__subtitle section__subtitle--about"></p> -->
   <div class="about-me__body">
     <!-- componente de about-me -->
-    <div class="col-7 p-1">
-      <h3><p class="p-1">
-        {{about}}
-      </p></h3>
+    <div class="col-11 p-1">
+      <h3>
+        <p class="p-1">
+          {{ about }}
+        </p>
+      </h3>
     </div>
 
     <div class="col-1 admin-btn">
-
       <button
         type="button"
         class="btn edit-btn btn-primary"
@@ -31,4 +32,3 @@
 </section>
 
 <app-editabout></app-editabout>
-
