--- a/portfolio-front/src/app/components/footer/footer.component.html
+++ b/portfolio-front/src/app/components/footer/footer.component.html
@@ -1,13 +1,12 @@
 <section class="footer">
   <div class="license">
-  <h3>AGREGAR LICENCIA ETC</h3>
+    <h3>AGREGAR LICENCIA ETC</h3>
   </div>
   <div>
-  <button class="btn">
-    <i class="fa-solid fa-arrow-up">
-      <a href="#home"> </a>
-    </i>
-  </button>
+    <h3>
+      <a href="#navigation">
+        <i class="fa-solid fa-arrow-up"> </i>
+      </a>
+    </h3>
   </div>
-
 </section>
