--- a/portfolio-front/src/app/components/navigation/navigation.component.html
+++ b/portfolio-front/src/app/components/navigation/navigation.component.html
@@ -1,7 +1,7 @@
-<section class="page-navigation">
+<section class="page-navigation" id="navigation">
   <div class="flex-container">
     <div class="menu-item">
-      <a href="#home" class="menu__link">
+      <a href="#navigation" class="menu__link">
         <span class="menu-number"><strong>01.</strong></span
         >&lt; inicio &gt;</a
       >
