--- a/portfolio-front/src/app/modals/addcourse/addcourse.component.html
+++ b/portfolio-front/src/app/modals/addcourse/addcourse.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="form" (ngSubmit)="onSubmit($event)">
+<form [formGroup]="form" (ngSubmit)="onSubmit($event)" name="addcourse">
   <div class="modal" tabindex="-1" id="addcourse">
     <div class="modal-dialog">
       <div class="modal-content">
