deleted unnecessary components

--- a/portfolio-front/src/app/components/about/about.component.html
+++ b/portfolio-front/src/app/components/about/about.component.html
@@ -19,7 +19,7 @@
         type="button"
         class="btn edit-btn btn-primary"
         data-bs-toggle="modal"
-        data-bs-target="#editabout"
+        data-bs-target="#editprofile"
       >
         <i class="fa-solid fa-wand-magic-sparkles"></i>
       </button>
@@ -31,4 +31,4 @@
   </div>
 </section>
 
-<app-editabout></app-editabout>
+<app-editprofile></app-editprofile>
