--- a/portfolio-front/src/app/components/about/about.component.html
+++ b/portfolio-front/src/app/components/about/about.component.html
@@ -6,10 +6,10 @@
   <!-- <p class="section__subtitle section__subtitle--about"></p> -->
   <div class="about-me__body">
     <!-- componente de about-me -->
-    <div class="col-11 p-1">
+    <div class="col-11 p-1" *ngFor="let person of people">
       <h3>
         <p class="p-1">
-          {{ about }}
+          {{ person.about }}
         </p>
       </h3>
     </div>
